# sky-link-api

./: .gitignore  README.md  angular.json  db.sqlite3  package-lock.json  package.json  pyproject.toml
django_settings/: asgi.py  settings.py  urls.py  wsgi.py
src/account/: apps.py  urls.py
src/account/admin/: __init__.py  address.py  address_inline.py  user.py
src/account/factories/: address_factory.py  user_factory.py
src/account/models/: address.py
src/account/serializers/: address.py  user.py
src/account/views/: address.py  user.py
src/airport/: apps.py  urls.py
src/airport/admin/: __init__.py  airport.py  gate.py  gate_inline.py  itinerary.py  itinerary_inline.py
src/airport/factories/: __init__.py  itinerary_factory.py
src/airport/migrations/: 0001_initial.py  0002_remove_itinerary_arrival_after_departure_and_more.py  0003_remove_itinerary_arrival_after_departure_and_more.py
src/airport/models/: __init__.py  airport.py  gate.py  itinerary.py
src/airport/serializers/: airport.py  gate.py  itinerary.py
src/airport/views/: airport.py  gate.py  itinerary.py
src/backend/account/: apps.py  urls.py
src/backend/airport/: apps.py  urls.py
src/backend/flight/: apps.py  urls.py
src/backend/payment/: apps.py  urls.py
src/flight/: apps.py  urls.py
src/flight/admin/: __init__.py  airline_company.py  baggage.py  baggage_inline.py  flight.py  reservation.py  seat.py  seat_inline.py
src/flight/factories/: __init__.py  reservation_factory.py  seat_factory.py
src/flight/models/: __init__.py  baggage.py  (+2 more)
src/frontend/: index.html  styles.css
(+159 files in other folders)
